force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/Apttus_Config2__ProductAttributeValue__c.object-meta.xml
<CustomObject>
    <description>Represents the attribute values for a product class</description>
    <label>Product Attribute Value</label>
    <nameField>
        <displayFormat>AV-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>