force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_Beginner__c.field-meta.xml
<CustomField>
    <fullName>APTS_Beginner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beginner</label>
    <type>Checkbox</type>
</CustomField>