force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_Course_Number_of_Weeks__c.field-meta.xml
<CustomField>
    <fullName>APTS_Course_Number_of_Weeks__c</fullName>
    <description>Is used as an Attribute for OSHC, TI and Course Literature articles for APP.</description>
    <label>Course Number of Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>