force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_Course_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>APTS_Course_Type_Code__c</fullName>
    <description>Used for LT Course type code, e.g. GEN, INT etc</description>
    <label>Course Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>