force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_Course_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>APTS_Course_Type_Name__c</fullName>
    <description>used for LT Course type name, e.g. International, Junior International, Chelsea Camp etc</description>
    <label>Course Type Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>