force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_Destination_Name__c.field-meta.xml
<CustomField>
    <fullName>APTS_Destination_Name__c</fullName>
    <description>Used for destination name coming from apollo, e.g. Hasting Host Family</description>
    <label>Destination Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>