force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_DestinationCode__c.field-meta.xml
<CustomField>
    <fullName>APTS_DestinationCode__c</fullName>
    <description>This Field is created to get Product Code in Product Attribute table to map with destination code in before insert of Product Attribute value trigger</description>
    <formula>IF(Apttus_Config2__LineItemId__r.Program__c = 'LT', LTDestinationCode__c, 
Apttus_Config2__LineItemId__r.Apttus_Config2__ProductId__r.ProductCode)</formula>
    <label>Destination Code</label>
    <type>Text</type>
</CustomField>