force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>