force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_IDP__c.field-meta.xml
<CustomField>
    <fullName>APTS_IDP__c</fullName>
    <description>used for IDP (International dep point) that is stored on LT course in Apollo</description>
    <label>IDP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>