force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_LT_Course_Price__c.field-meta.xml
<CustomField>
    <fullName>APTS_LT_Course_Price__c</fullName>
    <description>used for base LT course price coming from Apollo. the full price will be adjusted based on DDP selected</description>
    <label>LT Course Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>