force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_LTAgeGroup__c.field-meta.xml
<CustomField>
    <fullName>APTS_LTAgeGroup__c</fullName>
    <description>use to specify LT specific age separation: Junior or Senior courses</description>
    <label>LTAgeGroup</label>
    <length>20</length>
    <type>Text</type>
</CustomField>