force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_LTCS1_Location__c.field-meta.xml
<CustomField>
    <fullName>APTS_LTCS1_Location__c</fullName>
    <description>pre/posttour location</description>
    <label>LTCS1 Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>