force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_LTCS2_Location__c.field-meta.xml
<CustomField>
    <fullName>APTS_LTCS2_Location__c</fullName>
    <description>2nd pre/post tour, LT only</description>
    <label>LTCS2 Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>