force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_LTCS2_Type__c.field-meta.xml
<CustomField>
    <fullName>APTS_LTCS2_Type__c</fullName>
    <description>2nd pre/post tour, LT only</description>
    <label>LTCS2 Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>