force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_ProductionRegion__c.field-meta.xml
<CustomField>
    <fullName>APTS_ProductionRegion__c</fullName>
    <description>used for production region coming from apollo, .e.g UK and Ireland - the region where the course will take place</description>
    <label>ProductionRegion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>