force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>