force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/course_Number_of_Weeks__c.field-meta.xml
<CustomField>
    <fullName>course_Number_of_Weeks__c</fullName>
    <label>CourseNumber of Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>