force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/CS1_Type__c.field-meta.xml
<CustomField>
    <fullName>CS1_Type__c</fullName>
    <description>pre/post tour 1, LT only</description>
    <label>LT CS1 Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>