force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/LTDestinationCode__c.field-meta.xml
<CustomField>
    <fullName>LTDestinationCode__c</fullName>
    <description>Used to populate destination code for LT Bundle</description>
    <label>LTDestinationCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>