force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>This is used to trigger the correct pricing for Travel Insurance - quantity is cumulative per bundle; standard apttus functionality gives cumulative for total quantity of the product on the cart</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>