force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/StartDates__c.field-meta.xml
<CustomField>
    <fullName>StartDates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used for temporary purpose we will delete this field once we complete this date picker</description>
    <label>Course Start Date</label>
    <referenceTo>Start_Dates__c</referenceTo>
    <relationshipLabel>Product Attribute Values</relationshipLabel>
    <relationshipName>Product_Attribute_Values</relationshipName>
    <type>Lookup</type>
</CustomField>